--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon -r dotenv/config ./src/index.ts",
     "serve-prod": "node -r dotenv/config ./dist/src/index.js",
     "compile": "tsc --noEmit",
-    "studio": "prisma studio"
+    "studio": "prisma studio",
+    "generate-schema": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "author": "Mario Brusarosco",
   "license": "ISC",
@@ -31,7 +32,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -39,6 +41,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.13",
+    "@types/uuid": "^9.0.6",
     "hbs": "^4.2.0",
     "prisma": "^5.5.2",
     "rimraf": "^3.0.2",
