--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon -r dotenv/config ./src/index.ts",
     "serve-prod": "node -r dotenv/config ./dist/src/index.js",
     "compile": "tsc --noEmit",
-    "studio": "prisma studio",
+    "studio": "prisma studio --schema=./src/prisma/schema.prisma",
     "generate-schema": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "author": "Mario Brusarosco",
