--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.4",
     "nodemon": "^3.0.1",
+    "prisma": "^5.6.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
