--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^6.5.4",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
+    "typescript": "^5.3.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -46,7 +47,6 @@
     "hbs": "^4.2.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
