--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf ./dist && yarn generate-schema && tsc",
     "dev": "nodemon -r dotenv/config ./src/index.ts",
-    "serve-prod": "node -r dotenv/config ./dist/src/index.js",
+    "start": "node -r dotenv/config ./dist/src/index.js",
     "compile": "tsc --noEmit",
     "studio": "prisma studio --schema=./src/prisma/schema.prisma",
     "generate-schema": "prisma generate --schema=./src/prisma/schema.prisma"
