--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "homepage": "https://github.com/mariobrusarosco/api-one-word/#readme",
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@sentry/node": "^7.86.0",
+    "@sentry/profiling-node": "^1.2.6",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "csv-parse": "^5.3.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.5.4",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
     "typescript": "^5.3.2",
@@ -42,7 +42,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.7.13",
+    "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.6",
     "hbs": "^4.2.0",
     "rimraf": "^3.0.2",
