--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "CommonJS",
-    "lib": ["es6"],
+    "lib": ["ES2017", "dom"],
     "outDir": "./dist",
     "rootDir": "./",
     "baseUrl": "./",
