--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
     "typescript": "^5.3.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -44,6 +45,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.6",
+    "@types/ws": "^8.5.10",
     "hbs": "^4.2.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
