--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@prisma/client": "^5.5.2",
     "@sentry/node": "^7.86.0",
     "@sentry/profiling-node": "^1.2.6",
+    "@socket.io/admin-ui": "^0.5.1",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.6.0",
+    "socket.io": "^4.7.2",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
     "ws": "^8.15.1"
