--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-one-word",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "API - One Word",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,9 @@
     "compile": "tsc --noEmit",
     "studio": "prisma studio --schema=./src/prisma/schema.prisma",
     "generate-schema": "prisma generate --schema=./src/prisma/schema.prisma"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   },
   "author": "Mario Brusarosco",
   "license": "ISC",
@@ -23,8 +26,8 @@
   "homepage": "https://github.com/mariobrusarosco/api-one-word/#readme",
   "dependencies": {
     "@prisma/client": "^5.5.2",
-    "@sentry/node": "^7.86.0",
-    "@sentry/profiling-node": "^1.2.6",
+    "@sentry/node": "^8.0.0",
+    "@sentry/profiling-node": "^8.0.0",
     "@socket.io/admin-ui": "^0.5.1",
     "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
@@ -34,7 +37,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^3.0.1",
-    "prisma": "^5.6.0",
+    "prisma": "^5.14.0",
     "socket.io": "^4.7.2",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
