--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,13 @@
     "types": ["node"],
     "moduleResolution": "Node",
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "inlineSources": true,
+
+    // Set `sourceRoot` to  "/" to strip the build path prefix
+    // from generated source code references.
+    // This improves issue grouping in Sentry.
+    "sourceRoot": "/"
   }
 }
