--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   push:
     paths:
-      - ./prisma/migrations/** # Only run this workflow when migrations are updated
+      - ./src/prisma/migrations/**
     branches:
       - main
 
