feat: securing cookies + real authorization middleware

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - ./src/prisma/migrations/**
+      - prisma/migrations/**
     branches:
       - main
 
