feat: filter tables by memberId

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "CommonJS",
     "lib": ["ES2017", "dom"],
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "src",
     "baseUrl": "./",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -15,10 +15,14 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "inlineSources": true,
-
+    "paths": {
+      "@/*": ["src/*"]
+    },
     // Set `sourceRoot` to  "/" to strip the build path prefix
     // from generated source code references.
     // This improves issue grouping in Sentry.
     "sourceRoot": "/"
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
