--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "api-one-word",
-  "version": "0.11.0",
+  "version": "0.11.1",
   "description": "API - One Word",
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./dist && yarn generate-schema && tsc",
-    "dev": "tsx watch ./src/index.ts",
-    "start": "node -r dotenv/config ./dist/src/index.js",
+    "dev": "nodemon -r dotenv/config ./src/index.ts",
+    "start": "node -r dotenv/config ./dist/index.js",
     "compile": "tsc",
     "studio": "prisma studio --schema=./src/prisma/schema.prisma",
     "generate-schema": "prisma generate --schema=./src/prisma/schema.prisma",
@@ -31,12 +31,14 @@
     "@sentry/node": "^8.0.0",
     "@sentry/profiling-node": "^8.0.0",
     "@socket.io/admin-ui": "^0.5.1",
+    "@types/mongoose": "^5.11.97",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
+    "nodemon": "^3.0.1",
     "prisma": "^5.14.0",
     "socket.io": "^4.7.2",
     "typescript": "^5.3.2",
@@ -53,6 +55,7 @@
     "@types/ws": "^8.5.10",
     "hbs": "^4.2.0",
     "rimraf": "^3.0.2",
-    "tsx": "^4.11.2"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
