--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "api-one-word",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "API - One Word",
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./dist && yarn generate-schema && tsc",
-    "dev": "nodemon -r dotenv/config ./src/index.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
     "start": "node -r dotenv/config ./dist/index.js",
     "compile": "tsc",
     "studio": "prisma studio --schema=./src/prisma/schema.prisma",
@@ -37,7 +37,6 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^3.0.1",
     "prisma": "^5.14.0",
     "socket.io": "^4.7.2",
     "typescript": "^5.3.2",
@@ -55,6 +54,7 @@
     "hbs": "^4.2.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
