--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": ["ES2017", "dom"],
     "outDir": "./dist",
     "rootDir": "src",
-    "baseUrl": "./",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -15,6 +14,7 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "inlineSources": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
