fix: TS Build compile error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "sourceRoot": "/"
+    "sourceRoot": "/",
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "dist"],
