--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./dist && yarn generate-schema && tsc && tsc-alias",
-    "dev": "ts-node-dev -r tsconfig-paths/register ./src/index.ts",
+    "dev": "ts-node-dev  -r tsconfig-paths/register ./src/index.ts",
+    "dev-demo": "dotenvx run --env-file=.env.demo.local -- ts-node-dev -r tsconfig-paths/register  --project tsconfig.json./src/index.ts",
     "start": "node -r dotenv/config ./dist/index.js",
     "compile": "tsc && tsc-alias",
     "studio": "prisma studio --schema=./src/prisma/schema.prisma",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/mariobrusarosco/api-one-word/#readme",
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.17.0",
     "@prisma/client": "^5.5.2",
     "@sentry/cli": "^2.31.2",
     "@sentry/node": "^8.0.0",
@@ -34,7 +36,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^5.14.0",
@@ -46,9 +48,9 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.10.4",
+    "@types/node": "^22.7.4",
     "@types/uuid": "^9.0.6",
     "@types/ws": "^8.5.10",
     "hbs": "^4.2.0",
