--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
   },
   "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "dist"],
+  "files": ["src/types/express/index.d.ts"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   }
